--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#40526B"
     },
     "ios": {
       "supportsTablet": true
